還原點 0708: 完整品項管理功能
- 修復飲料菜單顯示問題
- 移除品項名稱中的多餘點號
- 更新進度指示器文字為「設定訂單截止時間」
- 新增品項數量顯示功能
- 新增品項增減按鈕 (+/−)
- 完整的測試覆蓋
- UI/UX 優化和視覺改進

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <!-- 改進的 Firebase 初始化：支持模擬器 -->
     <script type="module">
-      import { initializeFirebaseServices } from "/firebase-emulator.js";
+      import { initializeFirebaseServices } from "/firebase-emulator.ts";
 
       // 初始化 Firebase 服務（自動檢測模擬器）
       async function initializeFirebase() {
