修復訂單更新失敗問題並新增飲料甜度冰塊選擇功能
- 修復 Firebase updateDoc 函數缺失導致的訂單更新失敗
- 新增 DrinkCustomizationDialog 組件支援甜度和冰塊選擇 (0-10分)
- 修改 DrinkOrderingInterface 整合客製化對話框
- 更新 types.ts 添加 customizations 屬性
- 改善離線模式下的 updateDoc 支援
- 確保所有 Firebase 服務在離線模式下正常運作

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
               console.log('📱 離線模式：數據已保存到本地');
               return Promise.resolve();
             },
+            updateDoc: () => {
+              console.log('📱 離線模式：數據已更新到本地');
+              return Promise.resolve();
+            },
             onSnapshot: () => {
               console.log('📱 離線模式：使用本地數據');
               return () => {}; // 返回一個假的取消訂閱函式
